<resources>
    <string name="app_name">Doe Sangue</string>

    <string name="app_title">Doe Sangue, Doe Vida</string>
    <string name="btn_login">Login Doador</string>
    <string name="btn_registration">Cadastro Doador</string>
    <string name="btn_center_registration">Cadastro Centro de Coleta</string>
    <string name="complete_name">Nome Completo</string>
    <string name="email">E-mail</string>
    <string name="id">CPF</string>
    <string name="birthdate">Data de Nascimento</string>
    <string name="marital_status">Estado Civil</string>
    <string name="weight">Peso</string>
    <string name="height">Altura</string>
    <string name="blood_type">Tipo Sanguíneo</string>
    <string name="password">Senha</string>
    <string name="btn_next">Próximo</string>
    <string name="telephone">Telefone</string>
    <string name="zip_code">CEP</string>
    <string name="street">Logradouro</string>
    <string name="number">Número</string>
    <string name="additional_data">Complemento (Opcional)</string>
    <string name="neighbourhood">Bairro</string>
    <string name="state">Estado</string>
    <string name="city">Cidade</string>
    <string name="register">Salvar</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_menu">Menu</string>
    <string name="confirmation_title">Revise seus dados</string>
    <string name="name_title">Nome:</string>
    <string name="email_title">Email:</string>
    <string name="birthday_title">Data de nascimento:</string>
    <string name="marital_title">Estado Civil:</string>
    <string name="height_title">Altura:</string>
    <string name="weight_title">Peso:</string>
    <string name="blood_title">Tipo sanguíneo:</string>
    <string name="cpf_title">CPF:</string>
    <string name="personal_data">Dados pessoais</string>
    <string name="address_title">Endereço</string>
    <string name="telephone_title">Telefone:</string>
    <string name="zip_code_title">CEP:</string>
    <string name="street_title">Logradouro:</string>
    <string name="number_title">Número:</string>
    <string name="additional_data_title">Complemento:</string>
    <string name="neighbourhood_title">Bairro:</string>
    <string name="city_title">Cidade:</string>
    <string name="state_title">Estado:</string>
    <string name="address_register">Endereço cadastrado!</string>
    <string name="personal_data_register">Dados pessoais cadastrados!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="donation_register">Cadastro doação</string>
    <string name="donation_information">Informações sobre doação</string>
    <string name="basic_requirements">Requisitos básicos</string>
    <string name="basic_text">» Estar em boas condições de saúde. \n\n» Ter entre 16 e 69 anos, desde que a primeira doação tenha sido feita até 60 anos (menores de 18 anos, necessitam de formulário de autorização).\n\n» Pesar no mínimo 50kg.\n\n» Estar descansado (ter dormido pelo menos 6 horas nas últimas 24 horas).\n\n» Estar alimentado (evitar alimentação gordurosa nas 4 horas que antecedem a doação).\n\n» Apresentar documento original com foto recente, que permita a identificação do candidato, emitido por órgão oficial (Carteira de Identidade ou cópia autenticada; Cartão de Identidade de Profissional Liberal; Carteira de Trabalho e Previdência Social; Carteira Nacional de Habilitação, digital ou física; RNE - Registro Nacional de Estrangeiro; Título de Eleitor Digital, desde que tenha a foto; e Passaporte brasileiro com filiação).</string>
    <string name="back">Voltar</string>
    <string name="temporary_text">» Resfriado: aguardar 7 dias após desaparecimento dos sintomas.\n\n» Gravidez. » 90 dias após parto normal e 180 dias após cesariana.\n\n» Amamentação (se o parto ocorreu há menos de 12 meses).\n\n» Ingestão de bebida alcoólica nas 12 horas que antecedem a doação.\n\n» Tatuagem, maquiagem definitiva e micropigmentação (sobrancelhas, lábios, etc.): aguardar 12 meses; se feitas em local adequado (seguro) e com todos os cuidados necessários (assepsia correta e material descartável), o prazo é de 6 meses. \n\n» Situações nas quais há maior risco de adquirir doenças sexualmente transmissíveis: aguardar 12 meses. \n\n» Qualquer procedimento endoscópico (endoscopia digestiva alta, colonoscopia, rinoscopia, etc.): aguardar 6 meses. \n\n» Extração dentária (verificar uso de medicação) ou tratamento de canal (verificar medicação): por 7 dias. \n\n» Cirurgia odontológica com anestesia geral: por 4 semanas. \n\n» Acupuntura: se realizada com material descartável: 24 horas; se realizada com laser ou sementes: apto; se realizada com material sem condições de avaliação: aguardar 12 meses. \n\n» Vacina contra gripe: por 48 horas. \n\n» Vacina contra Coronarivus: \n– 48 horas após cada dose (Coronavac e Covaxin); \n– 7 dias após cada dose (AstraZeneca, Pfizer, Janssen–Cilag e Moderna). \n\n» Viagem ao exterior para qualquer país impede a doação por 30 dias, após o retorno. \n\n» Viagem no Brasil: estados como Acre, Amapá, Amazonas, Rondônia, Roraima, Maranhão, Mato Grosso, Pará e Tocantins são locais onde há alta prevalência de malária. Quem esteve nesses estados deve aguardar 12 meses para doar, após o retorno. \n\n» Europa: quem morou na Europa após 1980, verificar aptidão pelo Alô Pró–Sangue (11) 4573–7800 \n\n»Doenças: \n» Herpes labial ou genital: apto após desaparecimento total das lesões. \n» Herpes Zoster: apto após 6 meses da cura (vírus Varicella Zoster). \n» Malária: quem esteve em países com alta prevalência de malária deve aguardar 12 meses após o retorno para doar. (critério semelhante ao dos estados brasileiros com prevalência elevada de malária). \n» Febre Amarela: quem esteve em região onde há surto da doença deve aguardar 30 dias para doar, após o retorno; se tomou a vacina, deve aguardar 04 semanas; se contraiu a doença, deve aguardar 6 meses após recuperação completa (clínica e laboratorial). \n» Coronavírus: \n· Candidatos que apresentaram diagnóstico ou suspeita de coronavírus estão aptos a doar 10 dias após a completa recuperação. \n· Candidatos assintomáticos com teste positivo estão aptos a doar após 10 dias da data de realização do teste. \n· Candidatos que tiveram contato com casos positivos de contaminação por coronavírus estão aptos a doar após 7 dias do último contato. \n· Candidatos que fizeram isolamento voluntário ou por orientação médica estão aptos a doar após o término do tempo de indicação de isolamento. \n· Profissionais de saúde estão aptos a doar, desde que estejam fazendo uso correto de EP</string>
    <string name="main_temporary_impediments">Principais impedimentos temporários</string>
    <string name="main_definitive_impediments">Principais impedimentos definitivos</string>
    <string name="definitive_text">» Hepatite após os 11 anos de idade. *\n\n» Evidência clínica ou laboratorial das seguintes doenças infecciosas transmissíveis pelo sangue: Hepatites B e C, AIDS (vírus HIV), doenças associadas aos vírus HTLV I e II e Doença de Chagas.\n\n» Uso de drogas ilícitas injetáveis.\n\n» Malária.\n\n» Doença de Parkinson.\n\n* Hepatite após o 11º aniversário: Recusa Definitiva. \nHepatite B ou C após ou antes dos 10 anos: Recusa definitiva. \nHepatite por Medicamento: apto após a cura e avaliado clinicamente. \nHepatite viral (A): após os 11 anos de idade, se trouxer o exame do diagnóstico da doença, será avaliado pelo médico da triagem.</string>
    <string name="periodicity_title">Intervalos para doação</string>
    <string name="periodicity_text">» Homens - 60 dias \n(máximo de 04 doações nos últimos 12 meses).\n\n» Mulheres - 90 dias \n(máximo de 03 doações nos últimos 12 meses).</string>
    <string name="after_care_text">1. Antes de deixar o banco de sangue, permaneça sentado por, pelo menos, 15 minutos. Coma e beba o lanche oferecido. \n\n2. Tome quantidades extras de líquidos nas primeiras 24 horas após a doação. Isto ajudará na reposição do volume perdido durante a doação. Esta medida é particularmente importante nas primeiras 4 horas após a doação. \n\n3. Evite subidas pesadas e exercícios físicos extenuantes por 12 horas. Esta conduta previne sangramentos e ajuda na cicatrização do local onde a agulha foi colocada. Também permite que seu corpo se ajuste à perda de volume ocorrida na doação. \n\n4. Mantenha o curativo no local da agulha por, no mínimo, 4 horas. Se você notar que o local voltou a sangrar, aplique uma pressão sobre o local por 2–5 minutos e então troque a curativo, mantendo–o por mais 4 horas. \n\n5. Se, após deixar o banco de sangue, você sentir mal–estar, tontura, fraqueza e sensação de que vai desmaiar, sente–se em qualquer local e coloque a cabeça entre os joelhos ou então, deite imediatamente no chão com as pernas elevadas. Estas medidas evitam quedas da própria altura e aumentam a circulação de sangue na cabeça, aliviando rapidamente os sintomas. \n\n6. Se você acha que existe uma razão pela qual o seu sangue não deve ser utilizado para transfusão e você não pode ou não quis dizer isto durante a doação, entre em contato o mais breve possível com a Pró–Sangue e solicite que seu sangue seja descartado. O descarte será totalmente confidencial. Isto é de grande importância para a segurança da transfusão do sangue que você doou e dos pacientes que recebem seu sangue. \n\nApós a doação você deverá seguir as seguintes orientações: \n» permanecer no Banco de Sangue por mais 15 minutos para evitar que você se sinta mal com a doação; \n» manter o curativo por pelo menos 4 horas; \n» não ingerir bebidas alcoólicas; \n» não fumar por 02 horas; \n» evitar esforço físico exagerado por 12 horas, especialmente com o braço utilizado para doação; \n» beber bastante líquido; \n» se for dirigir veículo automotor ou ser transportado em motocicleta, parar imediatamente o veículo em caso de mal–estar. \n\nNa ocorrência de febre, diarréia ou outro sintoma de doença infecciosa até 7 dias após a doação, comunicar imediatamente a Fundação Pró–Sangue pelos telefones (11) 4573–7594 ou 7599. \n\nVocê também poderá nos telefonar se: \n» apresentar algum sintoma ou sinal que julgue ser decorrente da doação; \n» quiser nos dar alguma informação adicional que não pode ou não quis dar durante a entrevista, no dia da doação.</string>
    <string name="after_care">Cuidados Pós-Doação</string>
    <string name="donation_registration_title">Cadastro de doação</string>
    <string name="date">Data</string>
    <string name="place">Local</string>
    <string name="how_do_you_feel">Como você se sentiu?</string>
    <string name="quantity">Quantidade de sangue</string>
    <string name="donation_history">Histórico de doações</string>
    <string name="date_title">Data:</string>
    <string name="place_title">Local:</string>
    <string name="quantity_title">Quantidade doada:</string>
    <string name="feeling_title">Como me senti:</string>
    <string name="line">----------------------------------------------------------------</string>
    <string name="gender">Gênero</string>


</resources>