<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/date_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date_title"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:fontFamily="@font/coolvetica_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/coolvetica_rg"
        app:layout_constraintStart_toEndOf="@+id/date_title"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="10/10/2022" />

    <TextView
        android:id="@+id/place_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/place_title"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:textColor="@color/purple_200"
        android:fontFamily="@font/coolvetica_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_title" />

    <TextView
        android:id="@+id/place_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/coolvetica_rg"
        tools:text="Hemocentro Paraíso"
        app:layout_constraintStart_toEndOf="@+id/place_title"
        app:layout_constraintTop_toTopOf="@+id/place_title" />

    <TextView
        android:id="@+id/quantity_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quantity_title"
        android:textStyle="bold"
        android:layout_marginTop="4dp"
        android:textColor="@color/purple_200"
        android:fontFamily="@font/coolvetica_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/place_title" />

    <TextView
        android:id="@+id/quantity_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="450ml"
        android:fontFamily="@font/coolvetica_rg"
        app:layout_constraintStart_toEndOf="@+id/quantity_title"
        app:layout_constraintTop_toTopOf="@+id/quantity_title" />

    <TextView
        android:id="@+id/feeling_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/feeling_title"
        android:textStyle="bold"
        android:textColor="@color/purple_200"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/coolvetica_rg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantity_title" />

    <TextView
        android:id="@+id/feeling_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        tools:text="Bem"
        android:fontFamily="@font/coolvetica_rg"
        app:layout_constraintStart_toEndOf="@+id/feeling_title"
        app:layout_constraintTop_toTopOf="@+id/feeling_title" />

    <TextView
        android:id="@+id/line"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feeling_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>